<resources>
    <string-array name="background">
        <item>Default</item>
        <item>Blue</item>
        <item>Pink</item>
        <item>Cyan</item>
        <item>Peach</item>
        <item>Orange</item>
        <item>Lime</item>
        <item>Sherbet</item>
        <item>Versus</item>
        <item>Rainbow</item>
        <item>Breeze</item>
        <item>Apple</item>
        <item>Plum</item>
        <item>Purple</item>
        <item>Shine</item>
        <item>Black</item>
    </string-array>
    <string-array name="background_value">
        <item>Default</item>
        <item>Blue</item>
        <item>Pink</item>
        <item>Cyan</item>
        <item>Peach</item>
        <item>Orange</item>
        <item>Lime</item>
        <item>Sherbet</item>
        <item>Versus</item>
        <item>Rainbow</item>
        <item>Breeze</item>
        <item>Apple</item>
        <item>Plum</item>
        <item>Purple</item>
        <item>Shine</item>
        <item>Black</item>
    </string-array>
    <string-array name="notification_priority">
        <item>MAX</item>
        <item>HIGH</item>
        <item>Default</item>
        <item>LOW</item>
        <item>MIN</item>
    </string-array>
    <string-array name="notification_priority_value">
        <item>MAX</item>
        <item>HIGH</item>
        <item>Default</item>
        <item>LOW</item>
        <item>MIN</item>
    </string-array>
    <string-array name="led_color">
        <item>White</item>
        <item>Red</item>
        <item>Magenta</item>
        <item>Yellow</item>
        <item>Cyan</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string-array name="led_color_value">
        <item>White</item>
        <item>Red</item>
        <item>Magenta</item>
        <item>Yellow</item>
        <item>Cyan</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string-array name="led_anim_speed">
        <item>Max</item>
        <item>Fast</item>
        <item>Default</item>
        <item>Slow</item>
        <item>Off</item>
    </string-array>
    <string-array name="led_anim_speed_value">
        <item>MAX</item>
        <item>HIGH</item>
        <item>Default</item>
        <item>LOW</item>
        <item>0</item>
    </string-array>
    <string name="app_name" translatable="false">ChargeCalc</string>
    <string name="current_charge_title">Current charge in percents</string>
    <string name="time_left_header">Days count after disconnect charger</string>
    <string name="submit_button">Submit</string>
    <string name="current_charge_value">Current charge:</string>
    <string name="time_left_value">Count:</string>
    <string name="warning_input_values">Please input value!</string>
    <string name="advanced_result_title">Advanced result</string>
    <string name="battery_charge_left">Charge left:</string>
    <string name="battery_percent_discharge_at_time">Percent discharge per day:</string>
    <string name="should_enough_time_with_full_charge">Days with full charge:</string>
    <string name="should_enough_time_with_current_charge">Days left:</string>
    <string name="simple_result_many_time">days</string>
    <string name="warning_error_calculation">Error</string>
    <string name="warning_calculation_input_other_value">Please input other value!</string>
    <string name="created_by">Developed by: AndyER03</string>
    <string name="current_charge_hint">Current charge</string>
    <string name="time_left_hint">Days count</string>
    <string name="about_title">About</string>
    <string name="simple_result_one_time">day</string>
    <string name="simple_result_some_time">days</string>
    <string name="save_values_btn">Remember</string>
    <string name="restore_values_btn">Paste</string>
    <string name="toast_values_reset">Values in memory has been reset</string>
    <string name="toast_values_not_reset">No values for reset in memory!</string>
    <string name="ui_title_preference">Interface</string>
    <string name="version_title">Build version:</string>
    <string name="bg_title_preference">App theme</string>
    <string name="notification_title_preference">Notifications</string>
    <string name="vibration_title_switch">Vibration</string>
    <string name="title_activity_settings">ChargeCalc Settings</string>
    <string name="support_in_developing">Participated in testing:</string>
    <string name="who_support_in_developing">Leshij and Boy77ruS</string>
    <string name="donate">Donate</string>
    <string name="donate_text">Toss a coin</string>
    <string name="easter_egg_where_is_the_ice_cream">Where is the Mr. IceCream?</string>
    <string name="easter_egg_press_again">Press again!</string>
    <string name="easter_egg_ice_cream_is_come_back">Mr. Ice cream is come Back =P</string>
    <string name="easter_egg_stop">Stop!</string>
    <string name="easter_egg_really_stop">Seriously stop!</string>
    <string name="easter_egg_offended">I\'m offended!</string>
    <string name="easter_egg_apologize">Do you want to apologize?</string>
    <string name="easter_egg_do_not_believe">I do not believe you!</string>
    <string name="easter_egg_really_apologize">Do you really want to apologize?</string>
    <string name="easter_egg_forgive">Well, I forgive you. =)</string>
    <string name="easter_egg_ha_ha_ha">Ha-ha-ha.</string>
    <string name="easter_egg_magic">Do you want to see the magic?</string>
    <string name="easter_egg_magic_part2">Press on Mr. IceCream!</string>
    <string name="easter_egg_forgive_on_text">Mr. IceCream calmed down. =)</string>
    <string name="splash_title_switch">Splash screen</string>
    <string name="splash_bg_title_preference">Splashscreen\'s theme</string>
    <string name="splash_bg_title_switch">Separate splashscreen\'s theme</string>
    <string name="exit_title">Exit</string>
    <string name="exit_dialog">Are you sure you want to exit?</string>
    <string name="no_button">No</string>
    <string name="clear_fields">Clear</string>
    <string name="alternative_clear_switch">Spare fields clear method</string>
    <string name="always_advanced_result_switch">Advanced result</string>
    <string name="show_clear_title_switch">Clear fields button</string>
    <string name="calculator_title_preference">Calculator</string>
    <string name="notification_switch">Result notification</string>
    <string name="result_channel_name">Autonomy calculation result</string>
    <string name="result_channel_description">Show autonomy result</string>
    <string name="estimated_autonomy_days_number_header">Estimated autonomy days count</string>
    <string name="estimated_autonomy_days_number_hint">Days count</string>
    <string name="estimated_autonomy_days_number_switch">Autonomy days count field</string>
    <string name="should_enough_time_with_current_charge_notification">Left:</string>
    <string name="notification_values_reset">Notification values ​​reset</string>
    <string name="notification_priority_title">Priority</string>
    <string name="ongoing_notification_switch">Ongoing notification</string>
    <string name="null_notification_switch">Hide empty notification</string>
    <string name="silent_notification_switch">Notification sound</string>
    <string name="option_summary_on">Enabled</string>
    <string name="option_summary_off">Disabled</string>
    <string name="restore_btn_notification_switch">Restore button</string>
    <string name="restore_btn_notification_summary_on">Result button holding will restore deleted notification</string>
    <string name="vibration_btn_title_switch">Vibration while buttons holding</string>
    <string name="clear_btn_notification_title_switch">Clear button</string>
    <string name="clear_btn_notification_summary_on">Clear fields button holding will clear notification values</string>
    <string name="turn_on_notifications">Enable notifications!</string>
    <string name="led_notification_switch">LED indicator</string>
    <string name="led_notification_color_title_preference">LED color</string>
    <string name="led_anim_speed">LED animation speed</string>
    <string name="left_days_count_checkbox">Show left days count</string>
</resources>
