<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:title="@string/donate"
            android:id="@+id/donate"
            android:icon="@drawable/ic_money_white_24dp"
            app:showAsAction="always"/>

        <item
            android:id="@+id/settings"
            android:title="@string/title_activity_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/about"
            android:title="@string/about_title"
            android:icon="@drawable/ic_info_white_24dp"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/exit"
            android:title="@string/exit_title"
            android:icon="@drawable/ic_exit_white_24dp"
            app:showAsAction="ifRoom"/>

</menu>